esl-shuffle, esl-seqstat added to miniapps, with new functions in msa, keyhash to support them.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@228 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/codestyle.tex
+++ b/documentation/codestyle.tex
@@ -720,8 +720,8 @@ Note that the order of the arguments is always \ccode{src}
 $\rightarrow$ \ccode{dest} (unlike the C library's \ccode{strcpy()}
 convention, which is the opposite order).
 
-\hypertarget{ifc:Duplicate}
-{\item[\ccode{\_Duplicate(obj)}] }
+\hypertarget{ifc:Clone
+{\item[\ccode{\_Clone(obj)}] }
 
 Creates and returns a pointer to a duplicate of \ccode{obj}.
 Equivalent to (and is a shortcut for) \ccode{dest = \_Create();
