Working on "make dist" many SVN Id keywords activated added various READMEs
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@231 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -1,14 +1,12 @@
 \vspace*{\fill}
 \begin{flushleft}
-Copyright (C) 2004-2008 Sean R. Eddy.\\
-Copyright (C) 2006-2008 HHMI Janelia Farm Research Campus.\\
-Copyright (C) 2004-2006 Washington University School of Medicine.\\
+Copyright (C) 2008 Howard Hughes Medical Institute\\
 \end{flushleft}
 
 \vspace{2em} 
 
 Easel's source code and documentation are freely redistributable and
-modifiable under the terms of the Janelia Software License.
+modifiable under the terms of the Janelia Farm Software License.
 
 
 
