Still working on 'make dist'
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@232 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/codestyle.tex
+++ b/documentation/codestyle.tex
@@ -708,7 +708,7 @@ For example:
 
 \begin{sreapi}
 \hypertarget{ifc:Copy}
-{\item[\_Copy(src, dest)]}
+{\item[\ccode{\_Copy(src, dest)}]}
 
 Copies \ccode{src} object into \ccode{dest}, where the caller has
 already created an appropriately allocated and empty \ccode{dest}
@@ -720,7 +720,7 @@ Note that the order of the arguments is always \ccode{src}
 $\rightarrow$ \ccode{dest} (unlike the C library's \ccode{strcpy()}
 convention, which is the opposite order).
 
-\hypertarget{ifc:Clone
+\hypertarget{ifc:Clone}
 {\item[\ccode{\_Clone(obj)}] }
 
 Creates and returns a pointer to a duplicate of \ccode{obj}.
