--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -123,10 +123,10 @@ this book is in fact directly extracted from the source code.
 
 \section{Overview of Easel's modules}
 
-Still here? All right. Possibly your next question is, does \Easel
+Still here? All right. Possibly your next question is, does \Easel\ 
 provide any functionality you're interested in?
 
-Each \ccode{.c} file in \Easel\ corresponds to one \Easel
+Each \ccode{.c} file in \Easel\ corresponds to one \Easel\ 
 \esldef{module}.  A module consists of a group of functions for some
 task. Table~\ref{tbl:module_list} shows a list of all the modules. For
 example, the \eslmod{sqio} module can automatically parse many common
