--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -407,7 +407,7 @@
 \newpage
 \newcommand{\bibfont}{\footnotesize}
 \bibliographystyle{abbrvnat}
-\bibliography{master,lab,books,new}
+\bibliography{master,lab,books}
 
 \end{document}
 
