--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -395,6 +395,9 @@
 \chapter{Developer's guide}
 \input{codestyle}
 
+\newpage
+\chapter{Installation instructions}
+\input{installation}
 
 \newpage
 \chapter{Credits and acknowledgements}
