--- a/esl_keyhash.tex
+++ b/esl_keyhash.tex
@@ -24,8 +24,8 @@ The idea behind using the keyhash module is shown in this fragment of
 pseudocode:
 
 \begin{cchunk}
-       #include <easel.h>
-       #include <esl_keyhash.h>
+       #include "easel.h"
+       #include "esl_keyhash.h"
      
        ESL_KEYHASH *hash;
        int   idx;
