--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -1,12 +1,12 @@
 \vspace*{\fill}
 \begin{flushleft}
-Copyright (C) 2008 Howard Hughes Medical Institute\\
-\end{flushleft}
+Copyright (C) 2008 Howard Hughes Medical Institute.
 
 \vspace{2em} 
 
 Easel's source code and documentation are freely redistributable and
 modifiable under the terms of the Janelia Farm Software License.
+\end{flushleft}
 
 
 
